Final updates: visualization tweaks, layout fixes, text spacing

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ body {
     margin: 0 auto;
     text-align: justify;
   }
+
   
   .article p {
     margin-bottom: 25px;
@@ -220,4 +221,16 @@ body {
     color: #fefefe;
     text-decoration: none;
     font-weight: 500;
+  }
+  .centered-iframe-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 2px;
+  }
+  
+  .centered-iframe-container iframe {
+    width: 150%;
+    max-width: 2000px;
+    margin-left: 250px; /* Adjust this value to shift right */
+    border: none;
   }
